--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@ body {
   margin: 0;
 }
 body {
-   background-color: rgb(6, 62, 116);
+   background-color: #495873);
 }
 h1 {
   font-size: 150px;
@@ -18,7 +18,7 @@ h1 {
 .Sidebar {
   height: 100vh;
   max-width: 400px;
-  background-color: brown;
+  background-color: #274275;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -31,7 +31,7 @@ h1 {
   margin: 10px;
   margin-top: 10px;
   margin-bottom: 10px;
-  background-color: thistle;
+  background-color: #518BF7;
   display: flex;
   flex-direction: row;
   align-items: center;
@@ -40,7 +40,7 @@ h1 {
 }
 .Item:hover {
   transition: linear 100ms;
-  background-color: white;
+  background-color: #9ABAF5;
 }
 .Item:hover ~ .Item {
   transition: linear 100ms;
@@ -50,7 +50,7 @@ h1 {
   transition: linear 100ms;
   height: 10px;
   width: 10px;
-  background-color: blue;
+  background-color: #7A93C2;
   margin: 5px;
 }
 .Item:hover .Square {
