--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@ h1 {
    margin: 0%;
    font-weight: 900;
 }
-.Sidebar {
+.Bar {
   height: 10vh;
   width: 100vw;
   background-color: rgb(53, 75, 196);
