--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@ body {
   margin: 0;
 }
 body {
-   background-color: #a5abb6);
+   background-color: #3a6ac4);
 }
 h1 {
   font-size: 150px;
@@ -69,4 +69,10 @@ footer {
   width: 50%;
   margin: 15px;
   padding: 0px;
+  background-color: #3a6ac4;
+}
+
+.Meny1 {
+  display: flex;
+  flex-direction: row;
 }
