--- a/style.css
+++ b/style.css
@@ -1,4 +1,8 @@
 @charset "UTF-8";
+:root {
+  font-family: 'Roboto Condensed', sans-serif;
+  font-weight: 900;
+}
 html,
 body {
   margin: 0;
@@ -66,13 +70,18 @@ h1 {
 footer {
 	position: absolute;
 	bottom: 0px;
-  width: 50%;
-  margin: 15px;
+  width: 100%;
+  margin: 0px;
   padding: 0px;
   background-color: #3a6ac4;
+}
+
+.fot-text {
+  margin-left: 15px;
 }
 
 .Meny1 {
   display: flex;
   flex-direction: row;
+  font-size: 30;
 }
